使用 Colab 创建而成

--- a/torch_tutorial_lesson2_nn.ipynb
+++ b/torch_tutorial_lesson2_nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPUnCQnl3g9GaoH486N3zDv",
+      "authorship_tag": "ABX9TyNxASAsW/fu5NHr4h4jmKKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,14 +102,23 @@
         "#模型验证,检验准确率\n",
         "def check_accuracy(loader,model):\n",
         "  num_correct = 0\n",
-        "  num_sample = 0\n",
+        "  num_samples = 0\n",
         "  model.eval()\n",
         "\n",
         "  with torch.no_grad():\n",
         "    for x,y in loader:\n",
         "      x = x.to(device=device)\n",
         "      y = y.to(device=device)\n",
+        "      x = x.reshape(x.shape[0],-1)\n",
         "\n",
+        "      scores = model(x)\n",
+        "      _,predictions = scores.max(1)\n",
+        "      num_correct += (predictions==y).sum()\n",
+        "      num_samples += predictions.size(0)\n",
+        "    print(f\"got {num_correct}/{num_samples} with accuracy:{float(num_correct)/float(num_samples)*100:.2f}\")\n",
+        "\n",
+        "  model.train()\n",
+        "  return num_correct / num_samples\n",
         "\n",
         "\n",
         "\n"
