使用 Colab 创建而成

--- a/torch_tutorial_lesson2_nn.ipynb
+++ b/torch_tutorial_lesson2_nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNxASAsW/fu5NHr4h4jmKKa",
+      "authorship_tag": "ABX9TyOrKpA3DesFPBvM5N9pW/hz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
-        "id": "hp44oJeCDSx4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hp44oJeCDSx4",
+        "outputId": "989365ae-65b5-4899-ee56-e3ae9d8c30a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking accuracy on Train data\n",
+            "got 55992/60000 with accuracy:93.32\n",
+            "Checking accuracy on Test data\n",
+            "got 9312/10000 with accuracy:93.12\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.9312, device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -101,6 +126,10 @@
         "\n",
         "#模型验证,检验准确率\n",
         "def check_accuracy(loader,model):\n",
+        "  if loader.dataset.train:\n",
+        "    print(\"Checking accuracy on Train data\")\n",
+        "  else:\n",
+        "    print(\"Checking accuracy on Test data\")\n",
         "  num_correct = 0\n",
         "  num_samples = 0\n",
         "  model.eval()\n",
@@ -119,6 +148,9 @@
         "\n",
         "  model.train()\n",
         "  return num_correct / num_samples\n",
+        "\n",
+        "check_accuracy(train_loader,model)\n",
+        "check_accuracy(test_loader,model)\n",
         "\n",
         "\n",
         "\n"
