使用 Colab 创建而成

--- a/torch_tutorial_lesson3_LSTM.ipynb
+++ b/torch_tutorial_lesson3_LSTM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNhhqm7qjwspH5F6Ty5EHYa",
+      "authorship_tag": "ABX9TyP8DulRfORr8GIBNoZhQ2Id",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
         "batch_size = 64\n",
         "num_epochs = 2\n",
         "\n",
-        "# 创建双向LSTM\n",
+        "# 创建双向LSTM,效果没有RNN好\n",
         "class BRNN(nn.Module):\n",
         "    def __init__(self,input_size,hidden_size,num_layers, num_classes):\n",
         "        super(BRNN, self).__init__()\n",
@@ -191,6 +191,161 @@
         "check_accuracy(train_loader,model)\n",
         "check_accuracy(test_loader,model)\n",
         ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 保存模型和加载模型,以CNN模型为例\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import DataLoader\n",
+        "import torchvision.datasets as datasets\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "# 创建简单的cnn网络\n",
+        "class CNN(nn.Module):\n",
+        "    def __init__(self, in_channels=1, num_classes=10):\n",
+        "        super(CNN, self).__init__()\n",
+        "        self.conv1 = nn.Conv2d(in_channels=1,out_channels=8,kernel_size=(3,3),stride=(1,1),padding=(1,1))\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=(2,2),stride=(2,2))\n",
+        "        self.conv2 = nn.Conv2d(in_channels=8,out_channels=16,kernel_size=(3,3),stride=(1,1),padding=(1,1))\n",
+        "        self.fc1 = nn.Linear(16*7*7,num_classes)\n",
+        "\n",
+        "\n",
+        "    def forward(self,x):\n",
+        "      x = F.relu(self.conv1(x))\n",
+        "      x = self.pool(x)\n",
+        "      x = F.relu(self.conv2(x))\n",
+        "      x = self.pool(x)\n",
+        "      x = x.reshape(x.shape[0],-1)\n",
+        "      x = self.fc1(x)\n",
+        "      return x\n",
+        "# 保存模型数据\n",
+        "def save_checkpoint(state,filename=\"my_checkpoint.pth.tar\"):\n",
+        "  print(\"=> saving checkpoint\")\n",
+        "  torch.save(state,filename)\n",
+        "\n",
+        "# 加载模型数据\n",
+        "def load_checkpoint(checkpoint):\n",
+        "  model.load_state_dict(checkpoint['state_dict'])\n",
+        "  optimizer.load_state_dict(checkpoint['optimizer'])\n",
+        "\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "# print(device)\n",
+        "#超参数设置\n",
+        "in_channel = 1\n",
+        "num_classes = 10\n",
+        "learnng_rate = 0.001\n",
+        "\n",
+        "batch_size = 1024\n",
+        "num_epochs = 10\n",
+        "# load_model = False\n",
+        "load_model = True\n",
+        "\n",
+        "# 加载数据集\n",
+        "train_dataset = datasets.MNIST(root=\"dataset/\",train=True,transform=transforms.ToTensor(),download=True)\n",
+        "train_loader = DataLoader(dataset=train_dataset,batch_size=batch_size,shuffle=True)\n",
+        "\n",
+        "test_dataset = datasets.MNIST(root=\"dataset/\",train=False,transform=transforms.ToTensor(),download=True)\n",
+        "test_loader = DataLoader(dataset=test_dataset,batch_size=batch_size,shuffle=True)\n",
+        "# 初始化神经网络\n",
+        "# model = NN(input_size=input_size,num_classes=num_classes).to(device)\n",
+        "model = CNN().to(device)\n",
+        "#损失函数和优化器\n",
+        "criteron = nn.CrossEntropyLoss()\n",
+        "optimizer = optim.Adam(model.parameters(),lr=learnng_rate)\n",
+        "if load_model:\n",
+        "  load_checkpoint(torch.load(\"my_checkpoint.pth.tar\"))\n",
+        "\n",
+        "#训练模型\n",
+        "for epoch in range(num_epochs):\n",
+        "  losses = []\n",
+        "\n",
+        "  if epoch%3 == 0:\n",
+        "    checkpoint={\"state_dict\":model.state_dict(),\"optimizer\":optimizer.state_dict()}\n",
+        "    save_checkpoint(checkpoint)\n",
+        "\n",
+        "  for batch_idx,(data,targets) in enumerate(train_loader):\n",
+        "    # 把数据发送到cuda(如果可用)\n",
+        "    data=data.to(device=device)\n",
+        "    targets=targets.to(device=device)\n",
+        "    # forward\n",
+        "    scores = model(data)\n",
+        "    # loss\n",
+        "    loss = criteron(scores,targets)\n",
+        "    losses.append(loss)\n",
+        "    # 反向传播\n",
+        "    optimizer.zero_grad() # 清空优化器的梯度缓存\n",
+        "    loss.backward()\n",
+        "\n",
+        "    #梯度下降炒操作\n",
+        "    optimizer.step()\n",
+        "\n",
+        "#模型验证,检验准确率\n",
+        "def check_accuracy(loader,model):\n",
+        "  if loader.dataset.train:\n",
+        "    print(\"Checking accuracy on Train data\")\n",
+        "  else:\n",
+        "    print(\"Checking accuracy on Test data\")\n",
+        "  num_correct = 0\n",
+        "  num_samples = 0\n",
+        "  model.eval()\n",
+        "\n",
+        "  with torch.no_grad():\n",
+        "    for x,y in loader:\n",
+        "      x = x.to(device=device)\n",
+        "      y = y.to(device=device)\n",
+        "\n",
+        "      scores = model(x)\n",
+        "      _,predictions = scores.max(1)\n",
+        "      num_correct += (predictions==y).sum()\n",
+        "      num_samples += predictions.size(0)\n",
+        "    print(f\"got {num_correct}/{num_samples} with accuracy:{float(num_correct)/float(num_samples)*100:.2f}\")\n",
+        "\n",
+        "  model.train()\n",
+        "  return num_correct / num_samples\n",
+        "\n",
+        "check_accuracy(train_loader,model)\n",
+        "check_accuracy(test_loader,model)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "36HxBt7Ucbc4",
+        "outputId": "34a02722-ed25-47ef-f0b1-1018653acadd"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=> saving checkpoint\n",
+            "=> saving checkpoint\n",
+            "=> saving checkpoint\n",
+            "=> saving checkpoint\n",
+            "Checking accuracy on Train data\n",
+            "got 58373/60000 with accuracy:97.29\n",
+            "Checking accuracy on Test data\n",
+            "got 9733/10000 with accuracy:97.33\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.9733, device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
       ]
     },
     {
